[gd_scene load_steps=10 format=3 uid="uid://dhubdtk42tle8"]

[ext_resource type="PackedScene" uid="uid://dp3hsvkn4gaji" path="res://worlds/stages/base_room.tscn" id="1_hru7o"]
[ext_resource type="Script" uid="uid://cu4u3fkhhf1nf" path="res://worlds/stages/1/hydrogen_room.gd" id="2_lgy6p"]
[ext_resource type="Texture2D" uid="uid://cbhbbforbr47n" path="res://worlds/stages/1/T_Decals_H.png" id="3_0n7gw"]
[ext_resource type="PackedScene" uid="uid://lif88rujhcpl" path="res://creatures/enemies/ghost.tscn" id="3_44brh"]
[ext_resource type="PackedScene" uid="uid://ucok6obv5ji4" path="res://worlds/mesh/walls/top_astra_straight.tscn" id="4_cf3pm"]
[ext_resource type="PackedScene" uid="uid://beam84f4y4h0o" path="res://worlds/stages/1/hydrogen_001.tscn" id="6_ga7x4"]
[ext_resource type="PackedScene" uid="uid://6uprydwd5mwr" path="res://worlds/stages/1/hydrogen_002.tscn" id="7_ty888"]
[ext_resource type="Script" uid="uid://b1ml8y4r05et6" path="res://worlds/stages/1/hydrogen_002.gd" id="8_j2i7t"]
[ext_resource type="PackedScene" uid="uid://baioq4o6qy0rd" path="res://creatures/friends/robot/robot.tscn" id="9_3ddsq"]

[node name="HydrogenRoom" instance=ExtResource("1_hru7o")]
script = ExtResource("2_lgy6p")
atomic_number = 1
element_decal_png = ExtResource("3_0n7gw")

[node name="Core" parent="." index="0"]
neutron = Array[int]([0, 1, 2])

[node name="@Node3D@27094" parent="Structure/FirstFloor/Platform_Simple13/WallAstra_Corner_Square_Inner" index="2" instance=ExtResource("4_cf3pm")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, 0, -2)

[node name="@Node3D@27095" parent="Structure/FirstFloor/Platform_Simple17/WallAstra_Corner_Square_Inner" index="2" instance=ExtResource("4_cf3pm")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, 0, -2)

[node name="@Node3D@27096" parent="Structure/FirstFloor/Platform_Simple21/WallAstra_Corner_Square_Inner" index="2" instance=ExtResource("4_cf3pm")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, 0, -2)

[node name="@Node3D@27097" parent="Structure/FirstFloor/Platform_Simple25/WallAstra_Corner_Square_Inner" index="2" instance=ExtResource("4_cf3pm")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, 0, -2)

[node name="Building" parent="." index="4"]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, 9, 0)

[node name="Ghost" parent="." index="7" instance=ExtResource("3_44brh")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 5, 1.24337, -6)

[node name="Elevator" parent="Transport" index="0"]
downstairs = 3

[node name="Train" parent="Transport" index="1"]
destination = 2

[node name="Hydrogen001" parent="Content" index="0" instance=ExtResource("6_ga7x4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -4)

[node name="Hydrogen002" parent="Content" index="1" instance=ExtResource("7_ty888")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 1, 0)
script = ExtResource("8_j2i7t")
content = "Hydrogen is very light"

[node name="Robot" parent="." index="10" instance=ExtResource("9_3ddsq")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -1)

[connection signal="found" from="Core/Chest" to="." method="_on_chest_found"]
[connection signal="success" from="Content/Hydrogen001" to="." method="_on_hydrogen_001_success"]
